--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,17 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.title{
+  font-size: 0.8rem;
+  font-weight: 700;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.add-btn{
+  padding: 1rem;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-icon {
+  font-size:30px;
+  color:rgb(255, 196, 0);
 }
 
-#container a {
-  text-decoration: none;
+.radio-label{
+  font-size:larger;
 }
