--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,76 +10,76 @@
 <ion-content [fullscreen]="true">
     <ion-grid>
       <ion-row>
-        <ion-col sizeΜd="8" offsetMd="2">
+        <ion-col>
           <ion-item>
             <ion-label>Χρόνος ετοιμασίας/παράδοσης</ion-label>
             <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label>Γεύση</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item> 
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label>Τιμές</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item> 
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label>Ποιότητα</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item> 
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label>Εξυπηρέτηση</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item> 
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label>Εμπειρία online παραγγελίας</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item> 
         </ion-col>
       </ion-row>
       
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label  class="ion-text-wrap">Ποιό είναι το αδυνατό μας σημείο;</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
             
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col  sizeΜd="8" offsetMd="2">
+        <ion-col >
           <ion-item>
             <ion-label  class="ion-text-wrap">Σχόλια-Υποδείξεις-Προτάσεις</ion-label>
-            <ion-button slot="end">Edit</ion-button>
-            <ion-button slot="end">Delete</ion-button>
+            <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+            <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -87,8 +87,8 @@
         <ion-col>
           <ion-item>
             <ion-label>Θα ξαναπαραγγείλετε;</ion-label>
-              <ion-button slot="end">Edit</ion-button>
-              <ion-button slot="end">Delete</ion-button>
+              <ion-button slot="end" (click) = "openEditModal()">Edit</ion-button>
+              <ion-button slot="end" (click)="openAddModal()">Add</ion-button>
            
           </ion-item>
         </ion-col>
