--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -1,3 +1,6 @@
-<p>
-  add-modal works!
-</p>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title slot="start" class="title"></ion-title>
+    <ion-icon class="close-btn" slot="end" name="close-circle" (click)="closeModal()"></ion-icon>
+  </ion-toolbar>
+</ion-header>
