Delete and Alert

--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -1,6 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title slot="start" class="title"></ion-title>
-    <ion-icon class="close-btn" slot="end" name="close-circle" (click)="closeModal()"></ion-icon>
+    <ion-title class="title" slot="start" class="title"
+      >Δημιουργία Ερώτησης</ion-title
+    >
+    <ion-icon
+      class="close-btn"
+      slot="end"
+      name="close-circle"
+      (click)="closeModal()"
+    ></ion-icon>
   </ion-toolbar>
 </ion-header>
+
+<ion-content>
+  
+    <ion-grid>
+      <ion-row>
+        <ion-col sizeSm="6" offsetSm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating"
+                >Γράψτε την ερώτηση σας...</ion-label
+              >
+              <ion-input
+                type="text"
+                name="question"
+                required
+                question
+                #newQuestion
+              ></ion-input>
+              
+            </ion-item>
+            <ion-item lines="none">
+              <p class="error-message" *ngIf="!newQuestion.value">
+                Απαιτείται η εισαγωγή ερώτησης
+              </p>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col sizeSm="6" offsetSm="3">
+          <ion-button expand="block" color="primary" (click)="addNewQuestion(newQuestion.value)">
+            Προσθηκη Ερωτησης
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  
+</ion-content>
