--- a/src/app/home/add-modal/add-modal.component.scss
+++ b/src/app/home/add-modal/add-modal.component.scss
@@ -3,3 +3,13 @@
     font-size:30px;
     color:rgb(255, 196, 0);
 }
+
+.title{
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+
+.error-message{
+  font-size: 0.7rem;
+  text-decoration: underline;
+}
