--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title slot="start" class="title">
-      ΔΗΜΙΟΥΡΓΙΑ ΕΡΩΤΗΜΑΤΟΛΟΓΙΟΥ
+    <ion-title slot="start" class="ion-text-wrap">
+      ΔΙΑΧΕΙΡΙΣΗ ΕΡΩΤΗΜΑΤΟΛΟΓΙΟΥ
     </ion-title>
     <ion-icon slot="end" name="add-circle" class="add-btn" (click) ="openAddModal()"></ion-icon>
   </ion-toolbar>
