--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -13,39 +13,35 @@
 </ion-header>
 
 <ion-content>
-  
-    <ion-grid>
-      <ion-row>
-        <ion-col sizeSm="6" offsetSm="3">
-          <ion-list>
-            <ion-item>
-              <ion-label position="floating"
-                >Γράψτε την ερώτηση σας...</ion-label
-              >
-              <ion-input
-                type="text"
-                name="question"
-                required
-                question
-                #newQuestion
-              ></ion-input>
-              
-            </ion-item>
-            <ion-item lines="none">
-              <p class="error-message" *ngIf="!newQuestion.value">
-                Απαιτείται η εισαγωγή ερώτησης
-              </p>
-            </ion-item>
-          </ion-list>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col sizeSm="6" offsetSm="3">
-          <ion-button expand="block" color="primary" (click)="addNewQuestion(newQuestion.value)">
-            Προσθηκη Ερωτησης
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  
+  <ion-grid>
+    <ion-row>
+      <ion-col sizeSm="6" offsetSm="3">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Γράψτε την ερώτηση σας...</ion-label>
+            <ion-input
+              [(ngModel)]="question.text"
+              type="text"
+              name="text"
+            ></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Επιλέξτε τύπο Ερώτησης</ion-label>
+            <ion-select [(ngModel)]="question.type">
+              <ion-select-option value="radio"> radio </ion-select-option>
+              <ion-select-option value="keimeno"> keimeno </ion-select-option>
+              <ion-select-option value="stars"> asteria </ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col sizeSm="6" offsetSm="3">
+        <ion-button expand="block" color="primary">
+          Προσθηκη Ερωτησης
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
