--- a/src/app/home/add-modal/add-modal.component.scss
+++ b/src/app/home/add-modal/add-modal.component.scss
@@ -1,10 +1,9 @@
-.close-btn{
-    padding:1rem;
-    font-size:30px;
-    color:rgb(255, 196, 0);
+.close-btn {
+  margin-right:10px;
+  font-size: 30px;
+  color: rgb(79, 96, 255);
 }
 
-
-.error-message{
+.error-message {
   font-size: 0.7rem;
 }
