--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,12 +29,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-item>
-          <ion-label>Τιμές</ion-label>
-          <ion-button slot="end" (click)="openEditModal()">Edit</ion-button>
-          <ion-button slot="end">Delete</ion-button>
-        </ion-item>
-      </ion-col>
+        <ion-item>ΔΙΑΧΕΙΡΙΣΗ ΕΡΩΤΗΜΑΤΟΛΟΓΙΟΥ
     </ion-row>
     <ion-row>
       <ion-col>
@@ -85,7 +80,7 @@
           <ion-button slot="end">Delete</ion-button>
         </ion-item>
       </ion-col>
-    </ion-row> -->
+    </ion-row> -->ΔΙΑΧΕΙΡΙΣΗ ΕΡΩΤΗΜΑΤΟΛΟΓΙΟΥ
     <ion-row>
       <ion-col >
         <ion-item *ngFor = "let q of reviewsQuestionsArray">
