--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title class="title" slot="start" class="title"
-      >Δημιουργία Ερώτησης</ion-title
+      > {{'reviews-create-questionnaire.create-question' | translate}}</ion-title
     >
     <ion-icon
       class="close-btn"
