--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title slot="start" class="ion-text-wrap">
-      {{'reviews-create-questionnaire.questionnaire-management' | translate}}
+      {{'reviews-create-questionnaire.questionnaire-management' | translate }}
     </ion-title>
     <ion-icon
       slot="end"
@@ -20,7 +20,7 @@
           <ion-label class="ion-text-wrap">{{q.text}}</ion-label>
           <ion-label class="ion-text-wrap">{{q.type}}</ion-label>
           <ion-label class="ion-text-wrap">{{q.required}}</ion-label>
-          <ion-button title="{{'reviews-create-questionnaire.edit' | translate}}" fill="clear" class="edit-btn" slot="end" (click)="openEditModal()"
+          <ion-button title="{{'reviews-create-questionnaire.edit' | translate}}" fill="clear" class="edit-btn" slot="end" (click)="openEditModal(q)"
             ><ion-icon slot="icon-only" name="create-outline" ></ion-icon></ion-button
           >
           <ion-button fill="clear" slot="end" (click)="deleteQuestion()"><ion-icon name="trash" slot="icon-only"></ion-icon></ion-button>
