--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,22 +1,14 @@
 
 
-.add-btn{
-  padding: 1rem;
-}
-
-ion-icon {
-  font-size:30px;
-  color:rgb(79, 96, 255)
-}
-
 .radio-label{
   font-size:larger;
 }
 
-ion-button{
-  margin: 0;
+ion-badge{
+  margin-left:50px;
 }
+ion-icon {
+  margin-right:12px;
+  font-size:30px;
 
-.edit-btn{
-  margin-right: 5px;
 }
