--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -12,3 +12,18 @@ ion-icon {
   font-size:30px;
 
 }
+
+.edit-icon{
+  margin:0;
+
+}
+
+.bigger-text{
+  font-size:larger;
+}
+
+ion-badge{
+  --padding-bottom:4px;
+  --padding-top:4px;
+}
+
