--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,8 @@
     <ion-icon
       slot="end"
       name="add-circle"
-      class="ion-color-primary add-btn"
+      color="primary"
+      class="add-btn"
       (click)="openAddModal()"
     ></ion-icon>
   </ion-toolbar>
@@ -17,17 +18,48 @@
     <ion-row>
       <ion-col>
         <ion-item *ngFor="let q of reviewsQuestionsArray">
-          <div>
-            <ion-label class="ion-text-wrap">{{q.text}}</ion-label>
-            <ion-label class="ion-text-wrap">{{q.type}}</ion-label>
-          </div>
+          <ion-label>
+            <p>
+              Κείμενο ερώτησης:
+              <ion-text class="ion-text-wrap">{{q.text}}</ion-text>
+            </p>
+            <p>
+              Τύπος:
+              <ion-text
+                >{{"reviews-create-questionnaire." +q.type |
+                translate}}</ion-text
+              >
+            </p>
+          </ion-label>
 
-          <ion-badge slot="end" class="ion-text-wrap">{{q.required}}</ion-badge>
-
-          <ion-button title="{{'reviews-create-questionnaire.edit' | translate }}" fill="clear" class="edit-btn" slot="end" (click)="openEditModal(q)"
-            ><ion-icon class="edit-icon" slot="icon-only" name="create-outline" ></ion-icon></ion-button
-          >
-          <ion-button fill="clear" slot="end" (click)="deleteQuestion()"><ion-icon class="edit-icon" name="trash" slot="icon-only"></ion-icon></ion-button>
+          <ion-button
+            title="{{'reviews-create-questionnaire.edit' | translate }}"
+            fill="clear"
+            class="edit-btn"
+            slot="end"
+            (click)="openEditModal(q)"
+            ><ion-icon
+              class="edit-icon"
+              slot="icon-only"
+              name="create-outline"
+            ></ion-icon
+          ></ion-button>
+          <ion-button fill="clear" slot="end" (click)="deleteQuestion()"
+            ><ion-icon
+              class="edit-icon"
+              name="trash"
+              slot="icon-only"
+            ></ion-icon
+          ></ion-button>
+          <p>
+            <ion-badge
+              slot="start"
+              *ngIf="!q.required === false "
+              slot="bottom"
+              color="danger"
+              >Υποχρεωτική</ion-badge
+            >
+          </p>
         </ion-item>
       </ion-col>
     </ion-row>
